/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'application'
    id 'java'
    id 'maven-publish'
    id 'me.champeau.jmh' version '0.7.2'
}

jmh {
    includes = ['.*Bitpack.*']
    profilers = ['gc']
}

application {
    mainClass = 'org.kanatti.minilucene.Test'
}

repositories {
    mavenCentral()
}

dependencies {
    // Latest Lucene version
    implementation 'org.apache.lucene:lucene-core:10.3.1'
    implementation 'org.apache.lucene:lucene-analysis-common:10.3.1'

    // Testing
    testImplementation 'junit:junit:4.13.2'

    // JMH
    jmh 'org.openjdk.jmh:jmh-core:1.37'
    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
}

group = 'org.kanatti'
version = '1.0-SNAPSHOT'
description = 'minilucene'
java.sourceCompatibility = JavaVersion.VERSION_25


publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

java {
    sourceSets {
        main {
            annotationProcessorPath = configurations.annotationProcessor
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

test {
    failOnNoDiscoveredTests = false
}

// Define a custom task to run a specific main class
task runMain(type: JavaExec) {
    group = 'Execution'
    description = 'Runs the specified main class'

    if (project.hasProperty('mainClass')) {
        mainClass = project.getProperty('mainClass')
        classpath = sourceSets.main.runtimeClasspath
    }

    // Suppress Java warnings
    jvmArgs = [
        '--enable-native-access=ALL-UNNAMED',
        '--add-modules', 'jdk.incubator.vector'
    ]
}